figue/tests/integration/snapshots/main__integration__sequence__noargs_vec_positional_no_default.snap
---
source: crates/figue/tests/integration/sequence.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
main

USAGE:
    main <FILES>

ARGUMENTS:
        <FILES>
            Files to process (at least one required)


Error: missing required argument
   ╭─[ <usage>:1:6 ]
   │
 1 │ main <files>
   │      ───┬───  
   │         ╰───── Files to process (at least one required)
───╯
